[gd_scene load_steps=3 format=3 uid="uid://4g4byete5xg3"]

[ext_resource type="Script" path="res://src/main.gd" id="1_6vi6m"]
[ext_resource type="Script" path="res://src/Settings.gd" id="3_iir7k"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_6vi6m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuButtons" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -18.5
offset_right = 99.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2

[node name="LocalButton" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
text = "Play Locally"

[node name="OnlineButton" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
text = "Play Online"

[node name="ConnectionPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_left = 411.0
offset_top = 226.0
offset_right = 676.0
offset_bottom = 380.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 2
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Host:"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Port:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Client"

[node name="Settings" type="Node" parent="."]
script = ExtResource("3_iir7k")

[node name="UhOhLabel" type="Label" parent="Settings"]
offset_left = 478.0
offset_top = 57.0
offset_right = 518.0
offset_bottom = 80.0

[connection signal="pressed" from="CanvasLayer/MainMenuButtons/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButtons/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="button_down" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_server_button_button_down"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_client_button_pressed"]
